--- a/charter/index.html
+++ b/charter/index.html
@@ -1,1 +1,1 @@
-<head><meta http-equiv="REFRESH" content="3";url=https://docs.google.com/document/d/1JOAwCpVyAjBZAHn_sQJWlu5ynFGJ35ggCvfIMVFdPWc%22%3E</head>
+<head><meta http-equiv="REFRESH" content="3;url='https://docs.google.com/document/d/1JOAwCpVyAjBZAHn_sQJWlu5ynFGJ35ggCvfIMVFdPWc%22%3E'" /></head>
