--- a/lootprio/mc/index.html
+++ b/lootprio/mc/index.html
@@ -1,1 +1,1 @@
-<head><meta http-equiv="REFRESH" content="0;url=https://docs.google.com/spreadsheets/d/1y3HnW0kaGRWUFuf_96aj4UcDHqNirLNn34y2GrDTRGI/"</head>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRnarFpI80ZfcTk4uJeEJe744P1mj9wwN11KsKz1gBePTo2tSPhFCGSKJ7wOmjk5yWOTPq5unpZi8WD/pubhtml?gid=605869939&amp;single=true&amp;widget=true&amp;headers=false" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
