--- a/discord/index.html
+++ b/discord/index.html
@@ -1,1 +1,1 @@
-<head><meta http-equiv="REFRESH" content="0;url=https://discord.gg/zSzVjKv/"</head>
+<head><meta http-equiv="REFRESH" content="0;url=https://discord.gg/3rNSg83"</head>
