--- a/index.html
+++ b/index.html
@@ -1,5 +1,77 @@
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+	<title>&lt;Valkyrie&gt; Arugal-PvP</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/templatemo_style.css">
+</head>
 <body>
-<p><Valkyrie></p>
+	<header class="site-header container animated fadeInDown">
+		<div class="header-wrapper">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="site-branding">
+						<a href="index.html"><h1>&lt;Valkyrie&gt;</h1></a>
+						<h5>Alliance | Arugal-OCE-PvP</h5>
+					</div>
+				</div>
+				<a href="#" class="toggle-nav hidden-md hidden-lg">
+					<i class="fa fa-bars"></i>
+				</a>
+				<div class="col-md-8">
+					<nav id="nav" class="main-navigation hidden-xs hidden-sm">
+						<ul class="main-menu">
+							<li><a href="../discord">Discord</a></li>
+							<li><a href="../lootprio/mc">MC Loot Prio</a></li>
+							<li><a href="../consumables">Consumables</a></li>
+							<li><a href="../bis">Best in Slot</a></li>
+							<li><a href="../addons">Addons</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</header>
+	
+	<div id="menu-container">
+		<div class="homepage home-section container">
+			<div class="home-intro text-center">
+				<h2 class="welcome-title animated fadeInLeft">Introduction</h2>
+				<p class="animated fadeInRight">Welcome to &lt;Valkyrie&gt;! We're a serious guild, but we're not sweaty; we're progression focused but realistic that life is important; you're not just a cog in the wheel, you're a valued team player. We boast fair, transparent and experienced leadership with a forward thinking and well organised attitude.</p>
+			</div>
+			<div class="homepage home-section container">
+				<div class="home-intro text-center">
+					<div class="project-title animated fadeInUp">
+							<h4 class="welcome-title animated fadeInLeft">Raid Times</h4>
+							<p class="animated fadeInRight">Times are in Australia Eastern Standard Time + DLS (GMT/UTC +10)</br>
+							Wednesday & Thursday 21:00-24:00</br>
+							Sunday 20:00-24:00</br>
+							These times are reserved for later content patches (AQ, Naxx). Early raid content will require less time investment (1-2 days per week).</p>
+					</div>
+					<div class="project-title animated fadeInUp">
+							<h4 class="welcome-title animated fadeInLeft">Loot Distribution</h4>
+							<p class="animated fadeInRight">We will be using SuicideKings with loot council for tank items and recipes where necessary for progression.</p>
+					</div>
+					<div class="project-title animated fadeInUp">
+							<h4 class="welcome-title animated fadeInLeft">What we Offer</h4>
+							<p class="animated fadeInRight">
+							* A fun and inclusive atmosphere</br>
+							* Taco Fridays!</br>
+							* Unbiased and transparent loot distribution</br>
+							* Knowledgeable and experienced leadership Our leadership is not a dictatorship but rather an oligarchy; meaning your voice and efforts are heard through your relevant officers.</p>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	<span class="border-top"></span>
+	<span class="border-left"></span>
+	<span class="border-right"></span>
+	<span class="border-bottom"></span>
+	<span class="shape-1"></span>
+	<span class="shape-2"></span>
 </body>
 </html>
