--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 							* A fun and inclusive atmosphere</br>
 							* Taco Fridays!</br>
 							* Unbiased and transparent loot distribution</br>
-							* Knowledgeable and experienced leadership Our leadership is not a dictatorship but rather an oligarchy; meaning your voice and efforts are heard through your relevant officers.</p>
+* Knowledgeable and experienced leadership</br>
+Our leadership is not a dictatorship but rather an oligarchy; meaning your voice and efforts are heard through your relevant officers.</p>
 					</div>
 					</div>
 				</div>
