--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 							<li><a href="../addons">Addons</a></li>
 						</ul>
 					</nav>
+					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
+						<ul class="main-menu">
+							<li><a href="../discord">Discord</a></li>							
+							<li><a href="../consumables">Consumables</a></li>
+							<li><a href="../bis">Best in Slot</a></li>
+							<li><a href="../addons">Addons</a></li>
+						</ul>
+					</nav>
 				</div>
 			</div>
 		</div>
