--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 				<div class="col-md-8">
 					<nav id="nav" class="main-navigation hidden-xs hidden-sm">
 						<ul class="main-menu">
-							<li><a href="../discord">Discord</a></li>							
+							<li><a href="../discord">Discord</a></li>
+							<li><a href="../lootprio/mc">MC Loot Prio</a></li>
 							<li><a href="../consumables">Consumables</a></li>
 							<li><a href="../bis">Best in Slot</a></li>
 							<li><a href="../addons">Addons</a></li>
@@ -68,8 +69,7 @@
 							* A fun and inclusive atmosphere</br>
 							* Taco Fridays!</br>
 							* Unbiased and transparent loot distribution</br>
-* Knowledgeable and experienced leadership</br>
-Our leadership is not a dictatorship but rather an oligarchy; meaning your voice and efforts are heard through your relevant officers.</p>
+							* Knowledgeable and experienced leadership Our leadership is not a dictatorship but rather an oligarchy; meaning your voice and efforts are heard through your relevant officers.</p>
 					</div>
 					</div>
 				</div>
@@ -79,7 +79,7 @@ Our leadership is not a dictatorship but rather an oligarchy; meaning your voice
 	<span class="border-left"></span>
 	<span class="border-right"></span>
 	<span class="border-bottom"></span>
-	<span class="shape-1"></span>
-	<span class="shape-2"></span>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/templatemo_custom.js"></script>
 </body>
 </html>
