--- a/ksk/index.html
+++ b/ksk/index.html
@@ -1,1 +1,1 @@
-<head><meta http-equiv="REFRESH" content="0;url=https://docs.google.com/spreadsheets/d/1TU0KaeHkZ8wBjvUNqhKwdWNWyROLs6nXpTPQXZalYZg/"</head>
+<head><meta http-equiv="REFRESH" content="0;url=https://docs.google.com/spreadsheets/d/1xkCmngv8Bc_SDTlHLWeRTmsL-xsVy-JD8M6IsfcBt5Y/edit?usp=sharing"</head>
