--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 							<li><a href="../consumables">Consumables</a></li>
 							<li><a href="../bis">Best in Slot</a></li>
 							<li><a href="../addons">Addons</a></li>
+							<li><a href="../lootprio">Loot Prio</a></li>
+							<li><a href="../ksk">KSK</a></li>
+							<li><a href="../charter">Charter</a></li>
 						</ul>
 					</nav>
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
@@ -36,6 +39,9 @@
 							<li><a href="../consumables">Consumables</a></li>
 							<li><a href="../bis">Best in Slot</a></li>
 							<li><a href="../addons">Addons</a></li>
+							<li><a href="../lootprio">Loot Prio</a></li>
+							<li><a href="../ksk">KSK</a></li>
+							<li><a href="../charter">Charter</a></li>
 						</ul>
 					</nav>
 				</div>
