--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 							<li><a href="../lootprio">Loot Prio</a></li>
 							<li><a href="../ksk">KSK</a></li>
 							<li><a href="../charter">Charter</a></li>
+							<li><a href="../guildbank">Guild Bank</a></li>
 						</ul>
 					</nav>
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
@@ -42,6 +43,7 @@
 							<li><a href="../lootprio">Loot Prio</a></li>
 							<li><a href="../ksk">KSK</a></li>
 							<li><a href="../charter">Charter</a></li>
+							<li><a href="../guildbank">Guild Bank</a></li>
 						</ul>
 					</nav>
 				</div>
