--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 				<div class="col-md-8">
 					<nav id="nav" class="main-navigation hidden-xs hidden-sm">
 						<ul class="main-menu">
-							<li><a href="../discord">Discord</a></li>
 							<li><a href="../consumables">Consumables</a></li>
-							<li><a href="../bis">Best in Slot</a></li>
+							<li><a href="../bis">BiS</a></li>
 							<li><a href="../addons">Addons</a></li>
 							<li><a href="../lootprio">Loot Prio</a></li>
 							<li><a href="../ksk">KSK</a></li>
@@ -35,10 +34,9 @@
 						</ul>
 					</nav>
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
-						<ul class="main-menu">
-							<li><a href="../discord">Discord</a></li>							
+						<ul class="main-menu">							
 							<li><a href="../consumables">Consumables</a></li>
-							<li><a href="../bis">Best in Slot</a></li>
+							<li><a href="../bis">BiS</a></li>
 							<li><a href="../addons">Addons</a></li>
 							<li><a href="../lootprio">Loot Prio</a></li>
 							<li><a href="../ksk">KSK</a></li>
