--- a/signup/zg/index.html
+++ b/signup/zg/index.html
@@ -1,1 +1,1 @@
-https://docs.google.com/spreadsheets/d/1LouV4x4mLEeAtd9bfYASS0qjn6NXVe7hZBSKkjnxu9I/edit?usp=sharing
+<html><iframe src="https://docs.google.com/spreadsheets/d/1LouV4x4mLEeAtd9bfYASS0qjn6NXVe7hZBSKkjnxu9I/edit?usp=sharing" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe></html>
